# oncomap

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  netlify.toml  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-a-dataset.yml  config.yml
.github/workflows/: freshness.yml  validate.yml
docs/: CORRECTIVE_ACTIONS.md  DATA_SOURCES.md  DEPLOY.md  INCIDENT_RESPONSE.md  OncoMap-SPEC.md  RELEASE.md  SECURITY.md
extract/: draft_from_geo.py
records/datasets/: codex-brca-htan-htapp.yaml  codex-brca-htan-wustl.yaml  codex-ccrcc-htan-wustl.yaml  codex-coadread-htan-stanford.yaml  codex-coadread-htan-tnp-sardana.yaml  codex-coadread-htan-wustl.yaml  codex-fl-zenodo-zenodo-15690757.yaml  codex-hcc-zenodo-zenodo-13483663.yaml  codex-paad-htan-wustl.yaml  codex-sclc-zenodo-zenodo-16851985.yaml  codex-sclc-zenodo-zenodo-20722579.yaml  codex-skcm-htan-dfci.yaml  cosmx-brca-zenodo-zenodo-14039854.yaml  cosmx-brca-zenodo-zenodo-18943070.yaml  cosmx-chl-zenodo-zenodo-18434741.yaml  cosmx-coadread-geo-gse293124.yaml  cosmx-coadread-zenodo-zenodo-18326662.yaml  (+230 more)
schema/: dataset.schema.json  group.schema.json  method.schema.json  paper.schema.json
scripts/: build_site.sh
tests/: test_check_accessions.py  test_extract.py  test_harvest.py  test_monitor.py  test_promote.py
vocab/: README.md  build_vocab.py  oncotree.json  uberon.json  uberon_tissue_seed.txt
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+3 more)
(+111 files in other folders)
